OPTIONS-PRODUCT OP-02: model exact option payoff (#471)
